--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,41 +1,50 @@
-.results {
-    display: grid;
-    column-gap: 14px;
-    row-gap: 14px;
-    grid-template-columns: repeat(auto-fill, minmax(400px, 400px));
-    margin-top: 50px;
-    justify-content: space-around;
-  }
-  
-  input[type="text"] {
-    border: solid 1px var(--primary-color);
-    padding: 10px;
-    border-radius: 8px;
-    margin-right: 4px;
-    display: inline-block;
-    width: 30%;
-  }
-  
-  button {
-    padding: 10px;
-    border: solid 1px var(--primary-color);
-    background: var(--primary-color);
-    color: white;
-    border-radius: 8px;
-  }
-  
-  @media (min-width: 500px) and (max-width: 768px) {
-    .results {
-        grid-template-columns: repeat(2, 1fr);
-    }
-    input[type="text"] {
-        width: 70%;
-    }   
-  }
-  
-  @media (max-width: 499px) {
-    .results {
-        grid-template-columns: 1fr;
-    }    
-  }
-  
+.create-album-dialog {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: white;
+  padding: 20px;
+  border: 1px solid #ccc;
+  z-index: 9999;
+}
+.home-button{
+  color:white;
+  background:rgb(27, 45, 88);
+  position: absolute;
+  top:12%;
+  left: 96%;
+  width:35px;
+  height: 35px;
+  border: none;
+  font-size: 30px;
+  font-weight:200;
+  padding-bottom:20px;
+}
+.home-button:hover {
+  background:rgb(62, 92, 162);
+
+}
+.create-album-dialog{
+  border: 1px solid white;
+  border-radius: 10px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+  display: grid;
+  width: 300px;
+  height:300px;
+}
+.create-album-dialog label{
+  font-family: Helvetica;
+}
+.create-album-dialog input{
+  border: 1.5px solid rgb(27, 45, 88);
+  border-radius: 5px;
+  height:32px;
+}
+.create-album-dialog button{
+  border: 1px solid rgb(27, 45, 88);
+  background-color: rgb(27, 45, 88);
+  color: white;
+  border-radius: 5px;
+  height: 32px;
+}
