--- a/src/styles.css
+++ b/src/styles.css
@@ -1,23 +1,36 @@
 * {
-    margin: 0;
-    padding: 0;
-  }
-  
-  body {
-    font-family: 'Be Vietnam Pro', sans-serif;
-  }
-  :root {
-    --primary-color: #605DC8;
-    --secondary-color: #8B89E6;
-    --accent-color: #e8e7fa;
-    --shadow-color: #E8E8E8;
-  }
-  
-  button.primary {
-    padding: 10px;
-    border: solid 1px var(--primary-color);
-    background: var(--primary-color);
-    color: white;
-    border-radius: 8px;
-  }
-  
+
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+  margin: 0;
+  background-color: rgb(250, 234, 210);
+}
+
+app-home {
+  width: 100%;
+  height: 145px;
+  background-color: white;
+  padding: 16px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  border: 9px solid rgb(27, 45, 88);
+  border-radius: 17px;
+
+}
+
+app-home h1 {
+  color: rgb(235, 147, 16);
+  font-family: Helvetica;
+  margin: 0;
+  font-weight: 550;
+  font-size: 85px;
+  position: relative;
+  left: 43%;
+  text-decoration: none;
+}
